tests/snapshots/execution_spec__mutation-put.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "insertPost": {
        "body": "abc"
      }
    }
  }
}
