tests/snapshots/execution_spec__n-plus-one-list.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://example.com", batch: {delay: 1, maxSize: 1000}) {
  query: Query
}

type Bar {
  foo: [Foo] @http(batchKey: ["id"], path: "/foos", query: [{key: "id", value: "{{value.fooId}}"}])
  fooId: Int!
  id: Int!
}

type Foo {
  bar: Bar @http(batchKey: ["fooId"], path: "/bars", query: [{key: "fooId", value: "{{value.id}}"}])
  id: Int!
  name: String!
}

type Query {
  bars: [Bar] @http(path: "/bars")
  foos: [Foo] @http(path: "/foos")
}
