tests/snapshots/execution_spec__nested-objects.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "address": {
          "geo": {
            "lat": "-37.3159"
          }
        }
      }
    }
  }
}